Corrected summary vertical alignment
Added an additional 5px margin-left to accomodate for the 5px
padding-right assigned to each icon in the list.

--- a/TestStack.BDDfy/Reporters/Html/Scripts/classic.css
+++ b/TestStack.BDDfy/Reporters/Html/Scripts/classic.css
@@ -128,7 +128,7 @@ h3 {
 
 .storySummary div.summaryLine,
 .scenarioSummary div.summaryLine {
-    margin-left: 20px;
+    margin-left: 25px;
 }
 
 div#generatedAt {
